--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             el: "#app",
             data: {
                 activeIndex: "1",
-                aboutMeUrl: "test.html",
-                iframeUrl: "test.html",
+                aboutMeUrl: "./PageMain/mainPage.html",
+                iframeUrl: "./PageMain/mainPage.html",
 
                 menus: [{
                     name: "数据库",
