--- a/test.html
+++ b/test.html
@@ -1,32 +1,61 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>My first Vue app</title>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
+    </head>
+    <body>
+        <div id="watch-example">
+            <p>
+                Ask a yes/no question:
+                <input v-model="question">
+            </p>
+            <p>{{ answer }}</p>
+        </div>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <script src="https://unpkg.com/vue@next"></script>
-    <!-- import CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/element-plus/lib/theme-chalk/index.css">
-    <!-- import JavaScript -->
-    <script src="https://unpkg.com/element-plus/lib/index.full.js"></script>
-    <title>Element Plus demo</title>
-</head>
-
-<body>
-    <div id="app">
-        <el-button>{{ message }}</el-button>
-    </div>
-    <script>
-        const App = {
-            data() {
-                return {
-                    message: "Hello Element Plus",
-                };
-            },
-        };
-        const app = Vue.createApp(App);
-        app.use(ElementPlus);
-        app.mount("#app");
-    </script>
-</body>
-
+        <script>
+  var watchExampleVM = new Vue({
+   el: '#watch-example',
+   data: {
+    question: '',
+    answer: 'I cannot give you an answer until you ask a question!'
+   },
+   watch: {
+    // 如果 question 发生改变，这个函数就会运行
+    question: function (newQuestion, oldQuestion) {
+     this.answer = 'Waiting for you to stop typing...'
+     this.debouncedGetAnswer()
+    }
+   },
+   created: function () {
+    // `_.debounce` 是一个通过 Lodash 限制操作频率的函数。
+    // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
+    // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
+    // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
+    // 请参考：https://lodash.com/docs#debounce
+    this.debouncedGetAnswer = _.debounce(this.getAnswer, 500)
+   },
+   methods: {
+    getAnswer: function () {
+     if (this.question.indexOf('?') === -1) {
+      this.answer = 'Questions usually contain a question mark. ;-)'
+      return
+     }
+     this.answer = 'Thinking...'
+     var vm = this
+     axios.get('http://api.k780.com/?app=weather.today&weaId=1&appkey=10003&sign=b59bc3ef6191eb9f747dd4e83c99f2a4&format=json')
+      .then(function (response) {
+       vm.answer = _.capitalize(response.data.result)
+      })
+      .catch(function (error) {
+       vm.answer = 'Error! Could not reach the API. ' + error
+      })
+    }
+   }
+  })
+ </script>
+    </body>
 </html>
