--- a/PageDatabase/databaseSelect.html
+++ b/PageDatabase/databaseSelect.html
@@ -1,53 +1,66 @@
 <html>
 
-<head>
-    <title>数据库查询</title>
-    <!-- 引入样式 -->
-    <link rel="stylesheet" href="../lib/elementui/theme-chalk/index.css" type="text/css">
+    <head>
+        <title>数据库查询</title>
+        <!-- 引入样式 -->
+        <link rel="stylesheet" href="../lib/elementui/theme-chalk/index.css"
+            type="text/css">
 
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <script src="../lib/vue.js"></script>
-</head>
+        <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+        <script src="../lib/vue.js"></script>
+    </head>
 
-<body>
-    <div id="app">
+    <body>
+        <div id="app">
+            <el-container>
+                <el-aside width="300">
+                    <template>
+                        <el-table
+                            :data="tableData"
+                            style="width: 100%"
+                            height="500"
+                            :stripe="true"
+                            :highlight-current-row="true"
+                            @row-click="openDetails">
+                            <el-table-column
+                                prop="num"
+                                label="日期"
+                                width="50">
+                            </el-table-column>
+                            <el-table-column
+                                prop="name"
+                                label="姓名"
+                                width="100">
+                            </el-table-column>
+                            <el-table-column
+                                prop="tel"
+                                label="地址"
+                                width="150">
+                            </el-table-column>
+                        </el-table>
+                    </template>
 
-        <template>
-            <el-table
-              :data="tableData"
-              style="width: 100%"
-              height="600"
-              :stripe="true"
-              :highlight-current-row="true"
-              @row-click="openDetails">
-              <el-table-column
-                prop="num"
-                label="日期"
-                width="180">
-              </el-table-column>
-              <el-table-column
-                prop="name"
-                label="姓名"
-                width="180">
-              </el-table-column>
-              <el-table-column
-                prop="tel"
-                label="地址">
-              </el-table-column>
-            </el-table>
-          </template>
+                    <el-button type="primary" plain @click="getTabelData">获取数据库数据</el-button>
+                    <p>
+                        {{ message }}
+                    </p>
+                </el-aside>
+                <el-main>
+                    <div>
+                        <img src="../pic/头像.jpeg"
+                            alt="Pulpit rock"
+                            width="400"
+                            height="400">
 
-        <el-button type="primary" plain @click="getTabelData">获取数据库数据</el-button>
-        <p>
-            {{ message }}
-        </p>
+                    </div>
+                </el-main>
+            </el-container>
 
-    </div>
+        </div>
 
-    <!-- 引入组件库 -->
-    <script type="text/javascript" src="../lib/elementui/index.js"></script>
-
-    <script type="text/javascript">
+        <!-- 引入组件库 -->
+        <script type="text/javascript" src="../lib/elementui/index.js"></script>
+        <script type="text/javascript">
         var dataControl = new Vue({
             el: "#app",
             data: {
@@ -74,15 +87,15 @@
                         tel: "99999"
                     }
                     dataControl._data.tableData.push(newValue)*/
-                }
-            },
-            openDetails: function () {
+                },
+            openDetails: function (row) {
                 //具体操作        
-                message = "asdasd"
+                console.log(row)
+                dataControl.message = row.name
+            }
             }
         });
     </script>
-
-</body>
+    </body>
 
 </html>
